--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="game">
             <div id="character">
                 <div id="spooky">
-                    <img src="ghost.png" alt="ghost" style="width:300px;height:200px">
+                    <img src="ghost.png" id="ghost" style="width:300px;height:200px">
                     </div>
                 
             </div>
@@ -49,10 +49,9 @@
 </form>
 <button onclick="submitAnswer()">Submit Answer</button> -->
 
-    
         <script src="ghost.js" async defer></script>
         <script src="app.js" async defer></script>
-    <footer></footer>
+    <footer>Emily is the best</footer>
     </div>
     </body>
 </html>
