--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <div class="container">
-      <button class="button 1">Enter the Dungeon</button>
+        <input type="button" value="Enter the Dungeon" onclick="change()" id="startButton">
+        <input type="button" value="Exit the Dungeon" onclick="stop()" hidden>
+    <!-- <button id="button1">Enter the Dungeon</button> -->
     </div>
 
     <!-- <button type="submit" name="startGame" id="start">
