--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
           style="width: 300px; height: 200px"
         />
       </div>
-      <div id="title"></div>
+      <div id="question"></div>
       <ul>
-        <li class="alternative"></li>
-        <li class="alternative"></li>
-        <li class="alternative"></li>
-        <li class="alternative"></li>
+        <li class="answers"></li>
+        <li class="answers"></li>
+        <li class="answers"></li>
+        <li class="answers"></li>
       </ul>
 
       <script src="ghost.js" async defer></script>
