--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <script src="ghost.js" async defer></script>
       <script src="app.js" async defer></script>
-      <footer>Emily is the best</footer>
+      <footer></footer>
     </div>
   </body>
 </html>
