--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- <button id="button1">Enter the Dungeon</button> -->
     </div>
 
+    <!-- <iframe width="1px" height="1px" src="https://www.youtube.com/embed/a0Av2XNPd_g?&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+    
     <!-- <button type="submit" name="startGame" id="start">
             Enter the Dungeon
         </button> -->
