--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
         <input type="button" value="Enter the Dungeon" onclick="change()" id="startButton">
-        <input type="button" value="Exit the Dungeon" onclick="stop()" hidden>
+        <!-- <input type="button" value="Exit the Dungeon" onclick="stop()" hidden> -->
     <!-- <button id="button1">Enter the Dungeon</button> -->
     </div>
 
