--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
           style="width: 300px; height: 200px"
         />
       </div>
-      <div id="question"></div>
-      <ul>
-        <li class="answers"></li>
-        <li class="answers"></li>
-        <li class="answers"></li>
-        <li class="answers"></li>
-      </ul>
+      <div class="quest-container">
+        <div id="question"></div>
+        <ul>
+          <li class="answers"></li>
+          <li class="answers"></li>
+          <li class="answers"></li>
+          <li class="answers"></li>
+        </ul>
+      </div>
 
       <script src="ghost.js" async defer></script>
       <script src="app.js" async defer></script>
