--- a/startpage.html
+++ b/startpage.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" href="./styles/startpage.css">
 </head>
 <body id="startpage-body">
-  <button onclick="document.location='index.html'">Enter the Dungeon</button>
+  <div id="start-button-container">
+    <button onclick="document.location='index.html'">Enter the Dungeon</button>
+  </div>
 </body>
 </html>
