torch animation in progress

--- a/startpage.html
+++ b/startpage.html
@@ -5,7 +5,9 @@
 </head>
 <body id="startpage-body">
   <div id="start-button-container">
+    <img src="./torch.png" alt="" class="torch-image pulse">
     <button onclick="document.location='index.html'">Enter the Dungeon</button>
+    <img src="./torch.png" alt="" class="torch-image">
   </div>
 </body>
 </html>
