--- a/startpage.html
+++ b/startpage.html
@@ -5,9 +5,13 @@
 </head>
 <body id="startpage-body">
   <div id="start-button-container">
-    <img src="./torch.png" alt="" class="torch-image pulse">
+    <div class="torch-img-wrapper">
+      <img src="./torch.png" alt="" class="torch-image" id="left-torch">
+    </div>
     <button onclick="document.location='index.html'">Enter the Dungeon</button>
-    <img src="./torch.png" alt="" class="torch-image">
+    <div class="torch-img-wrapper">
+      <img src="./torch.png" alt="" class="torch-image">
+    </div>
   </div>
 </body>
 </html>
