--- a/index.html
+++ b/index.html
@@ -34,12 +34,22 @@
           <img src="ghost.png" id="ghost" style="width: 300px; height: 200px" />
         </div>
       </div>
-      <div id="knight">
+      <div id="knight" hidden>
+        <div class="quest-container">
+            <div id="question"></div>
+            <ul>
+              <li class="answers"></li>
+              <li class="answers"></li>
+              <li class="answers"></li>
+              <li class="answers"></li>
+            </ul>
+          </div>
         <img
           src="shovel.png"
           alt="knight"
           style="width: 300px; height: 200px"
         />
+        
       </div>
       <div id="knight1">
         <img
@@ -48,7 +58,7 @@
           style="width: 300px; height: 200px"
         />
       </div>
-      <div class="quest-container">
+      <!-- <div class="quest-container">
         <div id="question"></div>
         <ul>
           <li class="answers"></li>
@@ -56,7 +66,7 @@
           <li class="answers"></li>
           <li class="answers"></li>
         </ul>
-      </div>
+      </div> -->
 
       <script src="ghost.js" async defer></script>
       <script src="app.js" async defer></script>
