--- a/startpage.html
+++ b/startpage.html
@@ -2,16 +2,34 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="./styles/startpage.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.css">
 </head>
 <body id="startpage-body">
+  <div data-pushbar-id="mypushbar1" data-pushbar-direction="right" class="pushy">
+		<button data-pushbar-close>Close</button>
+    <div>
+      <h1>How To Play:</h1>
+      <ul>
+        <p>How to Play</p>
+        <li>Use left and right arrow keys to move around</li>
+        <li>Answer questions correctly to advance to the next level</li>
+        <li>Answer all questions correctly to escape the dungeon</li>
+      </ul>
+    </div>
+	</div>
   <div id="start-button-container">
     <div class="torch-img-wrapper">
       <img src="./torch.png" alt="" class="torch-image" id="left-torch">
     </div>
     <button onclick="document.location='index.html'">Enter the Dungeon</button>
+    <button data-pushbar-target="mypushbar1">How To Play</button>
     <div class="torch-img-wrapper">
       <img src="./torch.png" alt="" class="torch-image">
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.js"></script>
+  <script>
+    const pushbar = new Pushbar({blur: true, overlay: true});
+  </script>
 </body>
 </html>
