--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="game">
       <div id="character">
         <div id="spooky">
-          <img src="ghost.png" id="ghost" style="width: 300px; height: 200px" />
+          <img src="img/ghost.png" id="ghost" style="width: 300px; height: 200px" />
         </div>
       </div>
       <div id="knight" hidden>
@@ -45,7 +45,7 @@
             </ul>
           </div>
         <img
-          src="shovel.png"
+          src="img/shovel.png"
           alt="knight"
           style="width: 300px; height: 200px"
         />
@@ -53,7 +53,7 @@
       </div>
       <div id="knight1">
         <img
-          src="shovel.png"
+          src="img/shovel.png"
           alt="knight"
           style="width: 300px; height: 200px"
         />
