--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <title>Code Dungeon</title>
   </head>
   <body>
-      <img src="img/gameover.png" id="gameover" hidden>
+      <div id="gameover" hidden>
+      <img src="img/gameover.png" id="gameover">
+      <button id="restart" onClick="window.location.reload();">Try Again?</button> 
+      </div>
     <div class="container">
         <input type="button" value="Enter the Dungeon" onclick="change()" id="startButton">
     <!-- <button id="button1">Enter the Dungeon</button> -->
@@ -24,7 +27,7 @@
         <img src="img/heart.png" id="heart3" style="width: 50px; height: 50px">
         <img src="img/heart.png" id="heart4" style="width: 50px; height: 50px">
     </div>
-        <button id="restart">Try Again?</button> 
+       
 
     <!-- <iframe width="1px" height="1px" src="https://www.youtube.com/embed/a0Av2XNPd_g?&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
     
