--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-    <!-- onLoad="window.scroll(0,0) -->
+    <!--  -->
   <head>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -13,7 +13,7 @@
     />
     <title>Code Dungeon</title>
   </head>
-  <body id="hotbod">
+  <body id="hotbod" onLoad="window.scroll(0,0)">
       <div id="gameover" hidden>
       <img src="img/gameover.png" id="gameover">
       <button id="restart" onClick="window.location.reload();">Try Again?</button> 
