--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-<<<<<<< HEAD
-    <!--  -->
-=======
+
   <!-- onLoad="window.scroll(0,0) -->
->>>>>>> 1608b1dbaea6dfcd7b1e714c509fa0c4d761f340
+
   <head>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -17,13 +15,14 @@
     />
     <title>Code Dungeon</title>
   </head>
-<<<<<<< HEAD
+
   <body id="hotbod" onLoad="window.scroll(0,0)">
+   
       <div id="gameover" hidden>
       <img src="img/gameover.png" id="gameover">
       <button id="restart" onClick="window.location.reload();">Try Again?</button> 
       </div>
-=======
+
   <body id="hotbod">
     <div id="gameover" hidden>
       <img src="img/gameover.png" id="gameover" />
@@ -31,7 +30,7 @@
         Try Again?
       </button>
     </div>
->>>>>>> 1608b1dbaea6dfcd7b1e714c509fa0c4d761f340
+
     <div class="container">
       <input
         type="button"
@@ -58,6 +57,36 @@
         <br /> LEFT & RIGHT to move forward or backward
         </p> -->
     <div id="game">
+        <div class="wrapper">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper1">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper2">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
       <div id="character">
         <div id="spooky">
           <img
