--- a/index.html
+++ b/index.html
@@ -87,6 +87,86 @@
                 <div class="base black"></div>
             </div>
         </div>
+        <div class="wrapper3">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper4">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper5">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper6">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper7">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper8">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper9">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper10">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
       <div id="character">
         <div id="spooky">
           <img
