--- a/index.html
+++ b/index.html
@@ -167,6 +167,36 @@
                 <div class="base black"></div>
             </div>
         </div>
+        <div class="wrapper11">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper12">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
+        <div class="wrapper13">
+            <div class="flame-wrapper">
+                <div class="flame red"></div>
+                <div class="flame orange"></div>
+                <div class="flame gold"></div>
+                <div class="flame white"></div>
+                <div class="base blue"></div>
+                <div class="base black"></div>
+            </div>
+        </div>
       <div id="character">
         <div id="spooky">
           <img
