fixed start page torches

--- a/startpage.html
+++ b/startpage.html
@@ -19,12 +19,12 @@
 	</div>
   <div id="start-button-container">
     <div class="torch-img-wrapper">
-      <img src="./torch.png" alt="" class="torch-image" id="left-torch">
+      <img src="img/torch.png" alt="" class="torch-image" id="left-torch">
     </div>
     <button onclick="document.location='index.html'">Enter the Dungeon</button>
     <button data-pushbar-target="mypushbar1">How To Play</button>
     <div class="torch-img-wrapper">
-      <img src="./torch.png" alt="" class="torch-image">
+      <img src="img/torch.png" alt="" class="torch-image">
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.js"></script>
