--- a/startpage.html
+++ b/startpage.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="./styles/startpage.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.css">
 </head>
+<header></header>
 <body id="startpage-body">
   <div data-pushbar-id="mypushbar1" data-pushbar-direction="right" class="pushy">
 		<button data-pushbar-close>Close</button>
@@ -18,15 +19,19 @@
     </div>
 	</div>
   <div id="start-button-container">
-    <div class="torch-img-wrapper">
-      <img src="img/torch.png" alt="" class="torch-image" id="left-torch">
-    </div>
-    <button onclick="document.location='index.html'">Enter the Dungeon</button>
-    <button data-pushbar-target="mypushbar1">How To Play</button>
-    <div class="torch-img-wrapper">
-      <img src="img/torch.png" alt="" class="torch-image">
-    </div>
+    <!-- <div id="start-button-inner-container"> -->
+      <div class="torch-img-wrapper">
+        <img src="img/torch.png" alt="" class="torch-image" id="left-torch">
+      </div>
+      <!-- <button id="enter-dungeon" onclick="document.location='index.html'">Enter the Dungeon</button> -->
+      <button id="enter-dungeon">Enter the Dungeon</button>
+      <button data-pushbar-target="mypushbar1">How To Play</button>
+      <div class="torch-img-wrapper">
+        <img src="img/torch.png" alt="" class="torch-image">
+      </div>
+    <!-- </div> -->
   </div>
+
   <div class="backDoor">
     <div class="door">  
     </div>
@@ -34,12 +39,15 @@
   <script src="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.js"></script>
   <script>
     const pushbar = new Pushbar({blur: true, overlay: true});
-    let element = document.querySelector(".door");
-element.addEventListener("click", toggleDoor);
+    
+    let enterDungeonButton = document.getElementById("enter-dungeon");
+    let doorElement = document.querySelector(".door");
+    enterDungeonButton.addEventListener("click", toggleDoor);
 
-function toggleDoor() {
-  element.classList.toggle("doorOpen");
-}
+    function toggleDoor() {
+      console.log('doorElem: ', doorElement);
+      doorElement.classList.toggle("doorOpen");
+    }
   </script>
 </body>
 </html>
