--- a/index.html
+++ b/index.html
@@ -222,13 +222,79 @@
           style="width: 300px; height: 200px"
         />
       </div>
-      <div id="knight1">
+      <div id="bossknight" hidden>
+        <div class="quest-container">
+          <div id="question"></div>
+          <ul>
+            <li class="answers"></li>
+            <li class="answers"></li>
+            <li class="answers"></li>
+            <li class="answers"></li>
+          </ul>
+        </div>
         <img
-          src="img/shovel.png"
-          alt="knight"
+          src="img/bossknight.png"
+          alt="bossknight"
           style="width: 300px; height: 200px"
-        />
-      </div>
+          />
+      </div> 
+
+      <div id="demonboss" hidden>
+        <div class="quest-container">
+          <div id="question"></div>
+          <ul>
+            <li class="answers"></li>
+            <li class="answers"></li>
+            <li class="answers"></li>
+            <li class="answers"></li>
+          </ul>
+        </div>
+        <img
+          src="img/demonboss.png
+          alt="demonboss"
+          style="width: 300px; height: 200px"
+          />
+      </div> 
+
+      <div id="dkboss" hidden>
+        <div class="quest-container">
+          <div id="question"></div>
+          <ul>
+            <li class="answers"></li>
+            <li class="answers"></li>
+            <li class="answers"></li>
+            <li class="answers"></li>
+          </ul>
+        </div>
+        <img
+          src="img/dkboss.png
+          alt="dkboss"
+          style="width: 300px; height: 200px"
+          />
+      </div> 
+
+      <div id="dualboss" hidden>
+        <div class="quest-container">
+          <div id="question"></div>
+          <ul>
+            <li class="answers"></li>
+            <li class="answers"></li>
+            <li class="answers"></li>
+            <li class="answers"></li>
+          </ul>
+        </div>
+        <img
+          src="img/dualboss.png"
+          alt="du"
+          style="width: 300px; height: 200px"
+          />
+      </div> 
+
+
+      
+
+
+
       <!-- <div class="quest-container">
         <div id="question"></div>
         <ul>
@@ -238,9 +304,9 @@
           <li class="answers"></li>
         </ul>
       </div> -->
-
-      <script src="ghost.js" async defer></script>
       <script src="app.js" async defer></script>
+      <script src="ghost.js" async defer></script>
+      
     </div>
   </body>
 </html>
