--- a/startpage.html
+++ b/startpage.html
@@ -19,34 +19,47 @@
     </div>
 	</div>
   <div id="start-button-container">
-    <!-- <div id="start-button-inner-container"> -->
+    <div id="start-button-inner-container">
       <div class="torch-img-wrapper">
         <img src="img/torch.png" alt="" class="torch-image" id="left-torch">
       </div>
-      <!-- <button id="enter-dungeon" onclick="document.location='index.html'">Enter the Dungeon</button> -->
-      <button id="enter-dungeon">Enter the Dungeon</button>
+
+      <button id="play-game">Play Game</button>
       <button data-pushbar-target="mypushbar1">How To Play</button>
+      
       <div class="torch-img-wrapper">
         <img src="img/torch.png" alt="" class="torch-image">
       </div>
-    <!-- </div> -->
+    </div>
   </div>
 
   <div class="backDoor">
-    <div class="door">  
+    <button id="enter-dungeon" onclick="document.location='index.html'" class="hidden">Enter the Dungeon</button>
+    <div class="door">
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.js"></script>
   <script>
     const pushbar = new Pushbar({blur: true, overlay: true});
     
-    let enterDungeonButton = document.getElementById("enter-dungeon");
+    let playGameButton = document.getElementById("play-game");
     let doorElement = document.querySelector(".door");
-    enterDungeonButton.addEventListener("click", toggleDoor);
+    let enterDungeonButton = document.getElementById("enter-dungeon");
+
+    playGameButton.addEventListener("click", toggleDoor);
+    playGameButton.addEventListener("click", toggleEnterDungeon);
 
     function toggleDoor() {
-      console.log('doorElem: ', doorElement);
       doorElement.classList.toggle("doorOpen");
+    }
+
+    function toggleEnterDungeon() {
+      let currentClasses = enterDungeonButton.classList;
+      for(let i in currentClasses) {
+        if(currentClasses[i] === 'hidden') {
+          enterDungeonButton.classList.remove('hidden')
+        }
+      }
     }
   </script>
 </body>
