added title tag to start page

--- a/startpage.html
+++ b/startpage.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="./styles/startpage.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.css">
+  <title>Code Dungeon</title>
 </head>
 <header></header>
 <body id="startpage-body">
