--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="backDoor">
-    <button id="enter-dungeon" onclick="document.location='index.html'" class="hidden">Enter the Dungeon</button>
+    <button id="enter-dungeon" onclick="document.location='quest.html'" class="hidden">Enter the Dungeon</button>
     <div class="door">
     </div>
   </div>
