--- a/quest.html
+++ b/quest.html
@@ -2,14 +2,15 @@
 
 <html>
 
-  <!-- onLoad="window.scroll(0,0) -->
+
 
   <head>
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/style.css" />
       href="https://fonts.googleapis.com/css2?family=Road+Rage&display=swap"
       rel="stylesheet"
     />
@@ -207,103 +208,15 @@
         </div>
       </div>
       <div id="knight" hidden>
-        <div class="quest-container">
-          <div id="question"></div>
-          <ul>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-          </ul>
-        </div>
         <img
-          src="img/shovel.png"
-          alt="knight"
-          style="width: 300px; height: 200px"
-        />
-      </div>
-      <div id="bossknight" hidden>
-        <div class="quest-container">
-          <div id="question"></div>
-          <ul>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-          </ul>
+        src="img/shovel.png"
+        alt="knight"
+        style="width: 300px; height: 200px"
+      />
+        <div id="quest-container"> 
         </div>
-        <img
-          src="img/bossknight.png"
-          alt="bossknight"
-          style="width: 300px; height: 200px"
-          />
-      </div> 
-
-      <div id="demonboss" hidden>
-        <div class="quest-container">
-          <div id="question"></div>
-          <ul>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-          </ul>
-        </div>
-        <img
-          src="img/demonboss.png
-          alt="demonboss"
-          style="width: 300px; height: 200px"
-          />
-      </div> 
-
-      <div id="dkboss" hidden>
-        <div class="quest-container">
-          <div id="question"></div>
-          <ul>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-          </ul>
-        </div>
-        <img
-          src="img/dkboss.png
-          alt="dkboss"
-          style="width: 300px; height: 200px"
-          />
-      </div> 
-
-      <div id="dualboss" hidden>
-        <div class="quest-container">
-          <div id="question"></div>
-          <ul>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-            <li class="answers"></li>
-          </ul>
-        </div>
-        <img
-          src="img/dualboss.png"
-          alt="du"
-          style="width: 300px; height: 200px"
-          />
-      </div> 
-
-
       
 
-
-
-      <!-- <div class="quest-container">
-        <div id="question"></div>
-        <ul>
-          <li class="answers"></li>
-          <li class="answers"></li>
-          <li class="answers"></li>
-          <li class="answers"></li>
-        </ul>
-      </div> -->
       <script src="app.js" async defer></script>
       <script src="ghost.js" async defer></script>
       
