added github links

--- a/index.html
+++ b/index.html
@@ -60,5 +60,13 @@
       }
     }
   </script>
+<div id="github">
+    <p>Check out our Github pages!</p>
+    <a href="https://github.com/Jfras7">Josh Frasure</a><br>
+    <a href="https://github.com/Emily-Landers">Emily Landers</a><br>
+    <a href="https://github.com/MikeKuhl">Michael Milsap</a><br>
+    <a href="https://github.com/BeauHibbert">Beau Hibbert</a><br>
+  </div>
+
 </body>
 </html>
