--- a/quest.html
+++ b/quest.html
@@ -5,15 +5,12 @@
 
 
   <head>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
-      href="https://fonts.googleapis.com/css2?family=Road+Rage&display=swap"
-      rel="stylesheet"
-    />
+     <link href="https://fonts.googleapis.com/css2?family=Road+Rage&display=swap"
+      rel="stylesheet"/>
     <title>Code Dungeon</title>
   </head>
 
