--- a/quest.html
+++ b/quest.html
@@ -22,13 +22,13 @@
   <body id="hotbod">
     <div id="gameover" hidden>
       <img src="img/gameover.png" id="gameover" />
-      <button id="restart" onclick="window.location.href='201Undefined/index.html'">
+      <button id="restart" onclick="window.location.href='/201Undefined/index.html'">
         Try Again?
       </button>
     </div>
 
     <div class="container">
-      <input type="button" value="Exit the Dungeon" onclick="window.location.href='201Undefined/index.html'" id="startButton"/>
+      <input type="button" value="Exit the Dungeon" onclick="window.location.href='/201Undefined/index.html'" id="startButton"/>
     </div>
     <div id="lives">
       <img src="img/heart.png" id="heart1" style="width: 50px; height: 50px" />
